[MN-401]: FIX enseignant peut saisir les éléments du programme sur le relevé périodique de sa classe : correctif sur la visibilité du libellé des éléments et des sous élément du programme quand il est trop long

--- a/src/main/resources/public/sass/global/specifics/_competences.scss
+++ b/src/main/resources/public/sass/global/specifics/_competences.scss
@@ -1400,6 +1400,10 @@ body.evaluations {
       height: 40px;
       overflow: hidden;
     }
+    &.skill-45{
+      height: 45px;
+      overflow: hidden;
+    }
     &.opened{
       height: auto;
       overflow: visible;
